<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameFragment"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="32dp">


    <TextView
        android:id="@+id/intro_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_paper_scissors"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_anthony_bahl"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/my_pick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/my_pick"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_rock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="2"
            android:backgroundTint="@color/button_grey"
            android:text="@string/rock"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_paper"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="2"
            android:backgroundTint="@color/button_grey"
            android:text="@string/paper"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_scissors"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="3"
            android:backgroundTint="@color/button_grey"
            android:text="@string/scissors"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/phone_pick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_pick_is"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phone_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_mark"
            android:textColor="@color/hot_pink"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/game_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/game_results"
        android:textColor="@color/hot_pink"
        android:textSize="20sp" />
</LinearLayout>